--- a/application.yml
+++ b/application.yml
@@ -19,7 +19,7 @@ spring:
       override-none: true
 
 # JPA
-spring.jpa.hibernate.ddl-auto: none
+spring.jpa.hibernate.ddl-auto: create-drop
 
 # Spring Boot 1.5 makes actuator secure by default
 management.security.enabled: false
@@ -56,7 +56,7 @@ spring:
   datasource:
     schema: classpath*:db/mysql/schema.sql
     data: classpath*:db/mysql/data.sql
-    url: jdbc:mysql://localhost:3306/petclinic?useSSL=false
+    url: jdbc:mysql://localhost:3306/test?useSSL=false
     username: root
-    password: petclinic
+    password: root
     initialization-mode: ALWAYS
